# serializer version: 1
# name: TestPropFormat.test_parse_groups
  '''
  SELECT uuid
  FROM events
  WHERE team_id = 99999
    AND ((has(['val_1'], replaceRegexpAll(JSONExtractRaw(properties, 'attr_1'), '^"|"$', ''))
          AND has(['val_2'], replaceRegexpAll(JSONExtractRaw(properties, 'attr_2'), '^"|"$', '')))
         OR (has(['val_2'], replaceRegexpAll(JSONExtractRaw(properties, 'attr_1'), '^"|"$', ''))))
  '''
# ---
# name: TestPropFormat.test_parse_groups[new_events_schema]
  '''
  SELECT uuid
  FROM events_json
  WHERE team_id = 99999
    AND ((has(['val_1'], replaceRegexpAll(ifNull(if(toJSONString(properties.^attr_1) != '{}', toJSONString(properties.^attr_1), if(startsWith(dynamicType(properties.attr_1), 'Array')
                                                                                                                                   OR startsWith(dynamicType(properties.attr_1), 'Map')
                                                                                                                                   OR startsWith(dynamicType(properties.attr_1), 'Tuple'), toJSONString(properties.attr_1), if(startsWith(dynamicType(properties.attr_1), 'DateTime'), replaceOne(toString(properties.attr_1), ' ', 'T'), toString(properties.attr_1)))), ''), '^"|"$', ''))
          AND has(['val_2'], replaceRegexpAll(ifNull(if(toJSONString(properties.^attr_2) != '{}', toJSONString(properties.^attr_2), if(startsWith(dynamicType(properties.attr_2), 'Array')
                                                                                                                                       OR startsWith(dynamicType(properties.attr_2), 'Map')
                                                                                                                                       OR startsWith(dynamicType(properties.attr_2), 'Tuple'), toJSONString(properties.attr_2), if(startsWith(dynamicType(properties.attr_2), 'DateTime'), replaceOne(toString(properties.attr_2), ' ', 'T'), toString(properties.attr_2)))), ''), '^"|"$', '')))
         OR (has(['val_2'], replaceRegexpAll(ifNull(if(toJSONString(properties.^attr_1) != '{}', toJSONString(properties.^attr_1), if(startsWith(dynamicType(properties.attr_1), 'Array')
                                                                                                                                      OR startsWith(dynamicType(properties.attr_1), 'Map')
                                                                                                                                      OR startsWith(dynamicType(properties.attr_1), 'Tuple'), toJSONString(properties.attr_1), if(startsWith(dynamicType(properties.attr_1), 'DateTime'), replaceOne(toString(properties.attr_1), ' ', 'T'), toString(properties.attr_1)))), ''), '^"|"$', ''))))
  '''
# ---
# name: TestPropFormat.test_parse_groups_persons
  '''
  SELECT uuid
  FROM events
  WHERE team_id = 99999
    AND ((distinct_id IN
            (SELECT distinct_id
             FROM
               (SELECT distinct_id,
                       argMax(person_id, version) as person_id
                FROM person_distinct_id2
                WHERE team_id = 99999
                GROUP BY distinct_id
                HAVING argMax(is_deleted, version) = 0)
             WHERE person_id IN
                 (SELECT id
                  FROM
                    (SELECT id,
                            argMax(properties, person._timestamp) as properties,
                            max(is_deleted) as is_deleted
                     FROM person
                     WHERE team_id = 99999
                     GROUP BY id
                     HAVING is_deleted = 0)
                  WHERE has(['1@posthog.com'], replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', '')))))
         OR (distinct_id IN
               (SELECT distinct_id
                FROM
                  (SELECT distinct_id,
                          argMax(person_id, version) as person_id
                   FROM person_distinct_id2
                   WHERE team_id = 99999
                   GROUP BY distinct_id
                   HAVING argMax(is_deleted, version) = 0)
                WHERE person_id IN
                    (SELECT id
                     FROM
                       (SELECT id,
                               argMax(properties, person._timestamp) as properties,
                               max(is_deleted) as is_deleted
                        FROM person
                        WHERE team_id = 99999
                        GROUP BY id
                        HAVING is_deleted = 0)
                     WHERE has(['2@posthog.com'], replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', ''))))))
  '''
# ---
# name: TestPropFormat.test_parse_groups_persons[new_events_schema]
  '''
  SELECT uuid
  FROM events_json
  WHERE team_id = 99999
    AND ((distinct_id IN
            (SELECT distinct_id
             FROM
               (SELECT distinct_id,
                       argMax(person_id, version) as person_id
                FROM person_distinct_id2
                WHERE team_id = 99999
                GROUP BY distinct_id
                HAVING argMax(is_deleted, version) = 0)
             WHERE person_id IN
                 (SELECT id
                  FROM
                    (SELECT id,
                            argMax(properties, person._timestamp) as properties,
                            max(is_deleted) as is_deleted
                     FROM person
                     WHERE team_id = 99999
                     GROUP BY id
                     HAVING is_deleted = 0)
                  WHERE has(['1@posthog.com'], replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', '')))))
         OR (distinct_id IN
               (SELECT distinct_id
                FROM
                  (SELECT distinct_id,
                          argMax(person_id, version) as person_id
                   FROM person_distinct_id2
                   WHERE team_id = 99999
                   GROUP BY distinct_id
                   HAVING argMax(is_deleted, version) = 0)
                WHERE person_id IN
                    (SELECT id
                     FROM
                       (SELECT id,
                               argMax(properties, person._timestamp) as properties,
                               max(is_deleted) as is_deleted
                        FROM person
                        WHERE team_id = 99999
                        GROUP BY id
                        HAVING is_deleted = 0)
                     WHERE has(['2@posthog.com'], replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', ''))))))
  '''
# ---
# name: test_parse_groups_persons_edge_case_with_single_filter
  tuple(
    'AND (  has(%(vglobalperson_0)s, "pmat_email"))',
    dict({
      'kglobalperson_0': 'email',
      'vglobalperson_0': list([
        '1@posthog.com',
      ]),
    }),
  )
# ---
# name: test_parse_prop_clauses_defaults
  tuple(
    '''
      AND (   has(%(vglobal_0)s, replaceRegexpAll(ifNull(if(toJSONString(properties.^event_prop) != '{}', toJSONString(properties.^event_prop), if(startsWith(dynamicType(properties.event_prop), 'Array') OR startsWith(dynamicType(properties.event_prop), 'Map') OR startsWith(dynamicType(properties.event_prop), 'Tuple'), toJSONString(properties.event_prop), if(startsWith(dynamicType(properties.event_prop), 'DateTime'), replaceOne(toString(properties.event_prop), ' ', 'T'), toString(properties.event_prop)))), ''), '^"|"$', ''))  AND distinct_id IN (
      SELECT distinct_id
      FROM (
          
      SELECT distinct_id, argMax(person_id, version) as person_id
      FROM person_distinct_id2
      WHERE team_id = %(team_id)s
      
      GROUP BY distinct_id
      HAVING argMax(is_deleted, version) = 0
      
      )
      WHERE person_id IN
      (
          SELECT id
          FROM (
              SELECT id, argMax(properties, person._timestamp) as properties, max(is_deleted) as is_deleted
              FROM person
              WHERE team_id = %(team_id)s
              GROUP BY id
              HAVING is_deleted = 0
          )
          WHERE   replaceRegexpAll(JSONExtractRaw(properties, %(kglobalperson_1)s), '^"|"$', '') ILIKE %(vglobalperson_1)s
      )
      ))
    ''',
    dict({
      'kglobal_0': 'event_prop',
      'kglobalperson_1': 'email',
      'vglobal_0': list([
        'value',
      ]),
      'vglobalperson_1': '%posthog%',
    }),
  )
# ---
# name: test_parse_prop_clauses_defaults.1
  tuple(
    'AND (   has(%(vglobal_0)s, replaceRegexpAll(ifNull(if(toJSONString(properties.^event_prop) != \'{}\', toJSONString(properties.^event_prop), if(startsWith(dynamicType(properties.event_prop), \'Array\') OR startsWith(dynamicType(properties.event_prop), \'Map\') OR startsWith(dynamicType(properties.event_prop), \'Tuple\'), toJSONString(properties.event_prop), if(startsWith(dynamicType(properties.event_prop), \'DateTime\'), replaceOne(toString(properties.event_prop), \' \', \'T\'), toString(properties.event_prop)))), \'\'), \'^"|"$\', \'\'))  AND replaceRegexpAll(JSONExtractRaw(person_props, %(kglobalperson_1)s), \'^"|"$\', \'\') ILIKE %(vglobalperson_1)s)',
    dict({
      'kglobal_0': 'event_prop',
      'kglobalperson_1': 'email',
      'vglobal_0': list([
        'value',
      ]),
      'vglobalperson_1': '%posthog%',
    }),
  )
# ---
# name: test_parse_prop_clauses_defaults.2
  tuple(
    'AND (   has(%(vglobal_0)s, replaceRegexpAll(ifNull(if(toJSONString(properties.^event_prop) != \'{}\', toJSONString(properties.^event_prop), if(startsWith(dynamicType(properties.event_prop), \'Array\') OR startsWith(dynamicType(properties.event_prop), \'Map\') OR startsWith(dynamicType(properties.event_prop), \'Tuple\'), toJSONString(properties.event_prop), if(startsWith(dynamicType(properties.event_prop), \'DateTime\'), replaceOne(toString(properties.event_prop), \' \', \'T\'), toString(properties.event_prop)))), \'\'), \'^"|"$\', \'\'))  AND argMax(person."pmat_email", version) ILIKE %(vpersonquery_global_1)s)',
    dict({
      'kglobal_0': 'event_prop',
      'kpersonquery_global_1': 'email',
      'vglobal_0': list([
        'value',
      ]),
      'vpersonquery_global_1': '%posthog%',
    }),
  )
# ---
# name: test_parse_prop_clauses_funnel_step_element_prepend_regression
  tuple(
    'AND ( (match(elements_chain, %(PREPEND__text_0_attributes_regex)s)))',
    dict({
      'PREPEND__text_0_attributes_regex': '(text="Insights1")',
    }),
  )
# ---
# name: test_parse_prop_clauses_precalculated_cohort
  tuple(
    '''
      AND ( pdi.person_id IN (
      SELECT DISTINCT person_id FROM cohortpeople WHERE team_id = %(team_id)s AND cohort_id = %(global_cohort_id_0)s AND version = %(global_version_0)s
      ))
    ''',
    dict({
      'global_cohort_id_0': 42,
      'global_version_0': None,
    }),
  )
# ---
